--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "typescript": "^3.7.3",
     "tslib": "^2.0.0",
     "@harmony-js/core": "^0.1.50",
+    "@harmony-swoop/utils": "^1.0.0",
     "dotenv": "^8.2.0"
   },
   "scripts": {
